[tool.poetry]
name = "app-poetry"
version = "0.1.0"
description = ""
authors = ["Unonazv <unonazv@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
prompt-toolkit = "^3.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
